{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 259,
  "lineage": "f8f3fb42-1a87-430a-7835-be7084b55989",
  "resources": [
    {
      "module": "module.eks",
      "mode": "data",
      "type": "kubernetes_service",
      "name": "nginx_ingress_controller",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "ingress-nginx/nginx-ingress-controller-ingress-nginx-controller",
            "metadata": [
              {
                "annotations": {
                  "meta.helm.sh/release-name": "nginx-ingress-controller",
                  "meta.helm.sh/release-namespace": "ingress-nginx",
                  "service.beta.kubernetes.io/aws-load-balancer-connection-draining-enabled": "true",
                  "service.beta.kubernetes.io/aws-load-balancer-connection-draining-timeout": "30",
                  "service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled": "true",
                  "service.beta.kubernetes.io/aws-load-balancer-type": "nlb"
                },
                "generation": 0,
                "labels": {
                  "app.kubernetes.io/component": "controller",
                  "app.kubernetes.io/instance": "nginx-ingress-controller",
                  "app.kubernetes.io/managed-by": "Helm",
                  "app.kubernetes.io/name": "ingress-nginx",
                  "app.kubernetes.io/part-of": "ingress-nginx",
                  "app.kubernetes.io/version": "1.7.0",
                  "helm.sh/chart": "ingress-nginx-4.6.0"
                },
                "name": "nginx-ingress-controller-ingress-nginx-controller",
                "namespace": "ingress-nginx",
                "resource_version": "3090",
                "uid": "ef966344-4ae8-4b28-87ad-5131c39ffe3b"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.100.97.70",
                "cluster_ips": [
                  "10.100.97.70"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "name": "http",
                    "node_port": 31022,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "http"
                  },
                  {
                    "name": "https",
                    "node_port": 30340,
                    "port": 443,
                    "protocol": "TCP",
                    "target_port": "https"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/component": "controller",
                  "app.kubernetes.io/instance": "nginx-ingress-controller",
                  "app.kubernetes.io/name": "ingress-nginx"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "aef9663444ae84b2887ad5131c39ffe3-f1f4f1d27dfb4f71.elb.us-east-1.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ]
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "ingress-nginx",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "ingress-nginx",
            "metadata": [
              {
                "generation": 0,
                "name": "ingress-nginx",
                "resource_version": "893",
                "uid": "6333f868-eb2f-44c2-9818-bb0864bd858b"
              }
            ]
          },
          "dependencies": [
            "module.eks.data.aws_eks_cluster.default",
            "module.eks.data.aws_eks_cluster_auth.default",
            "module.eks.module.eks.aws_cloudwatch_log_group.this",
            "module.eks.module.eks.aws_eks_cluster.this",
            "module.eks.module.eks.aws_iam_role.this",
            "module.eks.module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.eks.aws_security_group_rule.cluster",
            "module.eks.module.eks.aws_security_group_rule.node",
            "module.eks.module.eks.data.aws_caller_identity.current",
            "module.eks.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.data.aws_partition.current",
            "module.eks.module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.vpc.aws_subnet.private",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.cert_manager",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "cert_manager",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "cert-manager",
            "metadata": [
              {
                "annotations": {
                  "name": "cert-manager"
                },
                "generation": 0,
                "name": "cert-manager",
                "resource_version": "892",
                "uid": "0f17dd82-8905-4a8c-9863-5334ca4baa05"
              }
            ]
          },
          "dependencies": [
            "module.eks.data.aws_eks_cluster.default",
            "module.eks.data.aws_eks_cluster_auth.default",
            "module.eks.module.eks.aws_cloudwatch_log_group.this",
            "module.eks.module.eks.aws_eks_cluster.this",
            "module.eks.module.eks.aws_iam_role.this",
            "module.eks.module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.eks.aws_security_group_rule.cluster",
            "module.eks.module.eks.aws_security_group_rule.node",
            "module.eks.module.eks.data.aws_caller_identity.current",
            "module.eks.module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.module.eks.data.aws_partition.current",
            "module.eks.module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.eks.module.kms.data.aws_partition.current",
            "module.eks.module.vpc.aws_subnet.private",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201118949681:security-group/sg-02732b77cdb4cacec",
            "description": "EKS cluster security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04488d33c26db3a70"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04488d33c26db3a70"
                ],
                "self": false,
                "to_port": 10250
              }
            ],
            "id": "sg-02732b77cdb4cacec",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04488d33c26db3a70"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cloud-computing-cluster-2023050608074345450000000c",
            "name_prefix": "cloud-computing-cluster-",
            "owner_id": "201118949681",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "cloud-computing-cluster",
              "Project": "cloud-computing",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "cloud-computing-cluster",
              "Project": "cloud-computing",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6fc3bd96900132f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201118949681:security-group/sg-04488d33c26db3a70",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/TCP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress NTP/UDP to internet",
                "from_port": 123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 123
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress all HTTPS to internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Node all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02732b77cdb4cacec"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              }
            ],
            "id": "sg-04488d33c26db3a70",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "kubernetes.io/rule/nlb/client=aef9663444ae84b2887ad5131c39ffe3",
                "from_port": 30340,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30340
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "kubernetes.io/rule/nlb/client=aef9663444ae84b2887ad5131c39ffe3",
                "from_port": 31022,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 31022
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "kubernetes.io/rule/nlb/mtu",
                "from_port": 3,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 4
              },
              {
                "cidr_blocks": [],
                "description": "Allow access from control plane to webhook port of Nginx Ingress Controller",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02732b77cdb4cacec"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02732b77cdb4cacec"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02732b77cdb4cacec"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node all ports/protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "cloud-computing-node-2023050608074345510000000d",
            "name_prefix": "cloud-computing-node-",
            "owner_id": "201118949681",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "cloud-computing-node",
              "Project": "cloud-computing",
              "Terraform": "true",
              "kubernetes.io/cluster/cloud-computing": "owned"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "cloud-computing-node",
              "Project": "cloud-computing",
              "Terraform": "true",
              "kubernetes.io/cluster/cloud-computing": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6fc3bd96900132f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3950162153",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02732b77cdb4cacec",
            "security_group_rule_id": "sgr-0590d5f77c03fa6b1",
            "self": false,
            "source_security_group_id": "sg-04488d33c26db3a70",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-649470899",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02732b77cdb4cacec",
            "security_group_rule_id": "sgr-0b16cb9897e512dde",
            "self": false,
            "source_security_group_id": "sg-04488d33c26db3a70",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-313227830",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02732b77cdb4cacec",
            "security_group_rule_id": "sgr-0590d5f77c03fa6b1",
            "self": false,
            "source_security_group_id": "sg-04488d33c26db3a70",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Node all egress",
            "from_port": 0,
            "id": "sgrule-2977947100",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04488d33c26db3a70",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1190961043",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04488d33c26db3a70",
            "security_group_rule_id": "sgr-0027bbc7217ad2943",
            "self": false,
            "source_security_group_id": "sg-02732b77cdb4cacec",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-3045132244",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04488d33c26db3a70",
            "security_group_rule_id": "sgr-0053f2efc6e776267",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-1784625866",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04488d33c26db3a70",
            "security_group_rule_id": "sgr-0ef99e0bc15651dd9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-348200903",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-04488d33c26db3a70",
            "security_group_rule_id": "sgr-06a1e5e2de81c88c8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2600164261",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04488d33c26db3a70",
            "security_group_rule_id": "sgr-06f7bf25794e6955d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-345823683",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-04488d33c26db3a70",
            "security_group_rule_id": "sgr-0e6c67423521e3229",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_allow_access_from_control_plane",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow access from control plane to webhook port of Nginx Ingress Controller",
            "from_port": 8443,
            "id": "sgrule-1509826455",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04488d33c26db3a70",
            "security_group_rule_id": "sgr-0f0a236fb028757ba",
            "self": false,
            "source_security_group_id": "sg-02732b77cdb4cacec",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2490181730",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04488d33c26db3a70",
            "security_group_rule_id": "sgr-08645e47675302010",
            "self": false,
            "source_security_group_id": "sg-02732b77cdb4cacec",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3201139927",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04488d33c26db3a70",
            "security_group_rule_id": "sgr-005028f2f0cfb593a",
            "self": false,
            "source_security_group_id": "sg-02732b77cdb4cacec",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node all ports/protocols",
            "from_port": 0,
            "id": "sgrule-3153904813",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04488d33c26db3a70",
            "security_group_rule_id": "sgr-0bc7316af4314d38c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1840316006",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04488d33c26db3a70",
            "security_group_rule_id": "sgr-02816b1118b4e241a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3387907465",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-04488d33c26db3a70",
            "security_group_rule_id": "sgr-0271e34e1ccedf3b8",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.eks.aws_security_group.cluster",
            "module.eks.module.eks.aws_security_group.node",
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.eks_managed_node_group[\"general\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201118949681:security-group/sg-028726483df83fce0",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-028726483df83fce0",
            "ingress": [],
            "name": "general-eks-node-group-2023050608074348970000000e",
            "name_prefix": "general-eks-node-group-",
            "owner_id": "201118949681",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "general-eks-node-group",
              "Project": "cloud-computing",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "general-eks-node-group",
              "Project": "cloud-computing",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6fc3bd96900132f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks.module.eks_managed_node_group[\"general_2\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201118949681:security-group/sg-061f55c55a5b46adf",
            "description": "EKS managed node group security group",
            "egress": [],
            "id": "sg-061f55c55a5b46adf",
            "ingress": [],
            "name": "general_2-eks-node-group-2023050608074553630000000f",
            "name_prefix": "general_2-eks-node-group-",
            "owner_id": "201118949681",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "general_2-eks-node-group",
              "Project": "cloud-computing",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "general_2-eks-node-group",
              "Project": "cloud-computing",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6fc3bd96900132f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01f0d6b8fd1b45bb2",
            "association_id": "eipassoc-04de8984c4a2c94f1",
            "domain": "vpc",
            "id": "eipalloc-01f0d6b8fd1b45bb2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06829c92583a5a7a2",
            "private_dns": "ip-30-0-1-169.ec2.internal",
            "private_ip": "30.0.1.169",
            "public_dns": "ec2-44-215-39-30.compute-1.amazonaws.com",
            "public_ip": "44.215.39.30",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Name": "cloud-computing-us-east-1a",
              "Project": "cloud-computing",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "cloud-computing-us-east-1a",
              "Project": "cloud-computing",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201118949681:internet-gateway/igw-0547297f6a01860a9",
            "id": "igw-0547297f6a01860a9",
            "owner_id": "201118949681",
            "tags": {
              "Environment": "production",
              "Name": "cloud-computing",
              "Project": "cloud-computing",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "cloud-computing",
              "Project": "cloud-computing",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0a6fc3bd96900132f"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01f0d6b8fd1b45bb2",
            "association_id": "eipassoc-04de8984c4a2c94f1",
            "connectivity_type": "public",
            "id": "nat-005c0690342a06e9e",
            "network_interface_id": "eni-06829c92583a5a7a2",
            "private_ip": "30.0.1.169",
            "public_ip": "44.215.39.30",
            "subnet_id": "subnet-027af7badab61d89c",
            "tags": {
              "Environment": "production",
              "Name": "cloud-computing-us-east-1a",
              "Project": "cloud-computing",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "cloud-computing-us-east-1a",
              "Project": "cloud-computing",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03a9da4414ca62f561080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-005c0690342a06e9e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03a9da4414ca62f56",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_eip.nat",
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_nat_gateway.this",
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0547297f6a01860a9",
            "id": "r-rtb-0979d98f96efd46921080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0979d98f96efd4692",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_internet_gateway.this",
            "module.eks.module.vpc.aws_route_table.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201118949681:route-table/rtb-03a9da4414ca62f56",
            "id": "rtb-03a9da4414ca62f56",
            "owner_id": "201118949681",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-005c0690342a06e9e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "cloud-computing-private",
              "Project": "cloud-computing",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "cloud-computing-private",
              "Project": "cloud-computing",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6fc3bd96900132f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201118949681:route-table/rtb-0979d98f96efd4692",
            "id": "rtb-0979d98f96efd4692",
            "owner_id": "201118949681",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0547297f6a01860a9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "cloud-computing-public",
              "Project": "cloud-computing",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "cloud-computing-public",
              "Project": "cloud-computing",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6fc3bd96900132f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbcd76eb64434636",
            "route_table_id": "rtb-03a9da4414ca62f56",
            "subnet_id": "subnet-0626e7746ba4ac5cc"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.private",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08af7a30a5ae941bb",
            "route_table_id": "rtb-03a9da4414ca62f56",
            "subnet_id": "subnet-07617372b5666c7a6"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.private",
            "module.eks.module.vpc.aws_subnet.private",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0575ec4af99af630c",
            "route_table_id": "rtb-0979d98f96efd4692",
            "subnet_id": "subnet-027af7badab61d89c"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.public",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029bab782c119b410",
            "route_table_id": "rtb-0979d98f96efd4692",
            "subnet_id": "subnet-0a6918fb6bfa99d4e"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_route_table.public",
            "module.eks.module.vpc.aws_subnet.public",
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201118949681:subnet/subnet-0626e7746ba4ac5cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "30.0.1.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0626e7746ba4ac5cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "201118949681",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "cloud-computing-private-us-east-1a",
              "Project": "cloud-computing",
              "Terraform": "true",
              "kubernetes.io/cluster/cloud-computing": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "cloud-computing-private-us-east-1a",
              "Project": "cloud-computing",
              "Terraform": "true",
              "kubernetes.io/cluster/cloud-computing": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a6fc3bd96900132f"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201118949681:subnet/subnet-07617372b5666c7a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "30.0.1.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07617372b5666c7a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "201118949681",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "cloud-computing-private-us-east-1b",
              "Project": "cloud-computing",
              "Terraform": "true",
              "kubernetes.io/cluster/cloud-computing": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "cloud-computing-private-us-east-1b",
              "Project": "cloud-computing",
              "Terraform": "true",
              "kubernetes.io/cluster/cloud-computing": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a6fc3bd96900132f"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201118949681:subnet/subnet-027af7badab61d89c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "30.0.1.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027af7badab61d89c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "201118949681",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "cloud-computing-public-us-east-1a",
              "Project": "cloud-computing",
              "Terraform": "true",
              "kubernetes.io/cluster/cloud-computing": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "cloud-computing-public-us-east-1a",
              "Project": "cloud-computing",
              "Terraform": "true",
              "kubernetes.io/cluster/cloud-computing": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a6fc3bd96900132f"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201118949681:subnet/subnet-0a6918fb6bfa99d4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "30.0.1.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a6918fb6bfa99d4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "201118949681",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "production",
              "Name": "cloud-computing-public-us-east-1b",
              "Project": "cloud-computing",
              "Terraform": "true",
              "kubernetes.io/cluster/cloud-computing": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "cloud-computing-public-us-east-1b",
              "Project": "cloud-computing",
              "Terraform": "true",
              "kubernetes.io/cluster/cloud-computing": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a6fc3bd96900132f"
          },
          "dependencies": [
            "module.eks.module.vpc.aws_vpc.this",
            "module.eks.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:201118949681:vpc/vpc-0a6fc3bd96900132f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "30.0.1.0/24",
            "default_network_acl_id": "acl-0fd2957f70eec5c62",
            "default_route_table_id": "rtb-09ec6a680811b5aca",
            "default_security_group_id": "sg-0ce69aabae112f065",
            "dhcp_options_id": "dopt-088f2d6f07c191780",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a6fc3bd96900132f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09ec6a680811b5aca",
            "owner_id": "201118949681",
            "tags": {
              "Environment": "production",
              "Name": "cloud-computing",
              "Project": "cloud-computing",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "cloud-computing",
              "Project": "cloud-computing",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}